PhoneBugFix_PhoneUIFix_PrettyURL

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 /* Custom styles */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
+custom-navbar {
+    display: block;
+}
+
+
 body {
     font-family: 'Inter', sans-serif;
     min-height: 100vh;
